Add images and assets

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
             <input type="search" /><button type="submit">Submit</button>
           </form>
         </div>
-        <div class="profile">Levyne</div>
-        <div class="greeting">Hello there, Levyne</div>
+        <div class="profile">
+          <img src="./assets/images/cat-2.jpg" alt="" />Levyne
+        </div>
+        <div class="greeting">
+          <img src="./assets/images/cat-2.jpg" alt="" />Hello there, Levyne
+        </div>
         <div class="user-function">
           <ul>
             <li><button type="button">New</button></li>
@@ -25,16 +29,66 @@
         </div>
       </header>
       <div class="dashboard">
-        <div class="title">Dashboard</div>
-        <div class="home">Home</div>
-        <div class="profile">Profile</div>
-        <div class="messages">Messages</div>
-        <div class="history">History</div>
-        <div class="tasks">Tasks</div>
-        <div class="communities">Communities</div>
-        <div class="settings">Settings</div>
-        <div class="support">Support</div>
-        <div class="privacy">Privacy</div>
+        <div class="title">
+          <img
+            src="./assets/images/dashboard_FILL0_wght400_GRAD0_opsz48.svg"
+            alt=""
+          />Dashboard
+        </div>
+        <div class="home">
+          <img
+            src="./assets/images/home_FILL0_wght400_GRAD0_opsz48.svg"
+            alt=""
+          />Home
+        </div>
+        <div class="profile">
+          <img
+            src="./assets/images/person_FILL0_wght400_GRAD0_opsz48.svg"
+            alt=""
+          />Profile
+        </div>
+        <div class="messages">
+          <img
+            src="./assets/images/chat_FILL0_wght400_GRAD0_opsz48.svg"
+            alt=""
+          />Messages
+        </div>
+        <div class="history">
+          <img
+            src="./assets/images/history_FILL0_wght400_GRAD0_opsz48.svg"
+            alt=""
+          />History
+        </div>
+        <div class="tasks">
+          <img
+            src="./assets/images/task_FILL0_wght400_GRAD0_opsz48.svg"
+            alt=""
+          />Tasks
+        </div>
+        <div class="communities">
+          <img
+            src="./assets/images/groups_FILL0_wght400_GRAD0_opsz48.svg"
+            alt=""
+          />Communities
+        </div>
+        <div class="settings">
+          <img
+            src="./assets/images/settings_FILL0_wght400_GRAD0_opsz48.svg"
+            alt=""
+          />Settings
+        </div>
+        <div class="support">
+          <img
+            src="./assets/images/help_FILL0_wght400_GRAD0_opsz48.svg"
+            alt=""
+          />Support
+        </div>
+        <div class="privacy">
+          <img
+            src="./assets/images/verified_user_FILL0_wght400_GRAD0_opsz48.svg"
+            alt=""
+          />Privacy
+        </div>
       </div>
       <main>
         <h2>Your Projects</h2>
@@ -46,6 +100,20 @@
             earum ratione dignissimos fugiat obcaecati quam asperiores molestiae
             doloremque cupiditate rem.
           </p>
+          <div class="card-functions">
+            <img
+              src="./assets/images/favorite_FILL0_wght400_GRAD0_opsz48.svg"
+              alt=""
+            />
+            <img
+              src="./assets/images/bookmark_FILL0_wght400_GRAD0_opsz48.svg"
+              alt=""
+            />
+            <img
+              src="./assets/images/share_FILL0_wght400_GRAD0_opsz48.svg"
+              alt=""
+            />
+          </div>
         </div>
         <div class="card item-2">
           <h3>Less Cool Project</h3>
@@ -55,6 +123,20 @@
             earum ratione dignissimos fugiat obcaecati quam asperiores molestiae
             doloremque cupiditate rem.
           </p>
+          <div class="card-functions">
+            <img
+              src="./assets/images/favorite_FILL0_wght400_GRAD0_opsz48.svg"
+              alt=""
+            />
+            <img
+              src="./assets/images/bookmark_FILL0_wght400_GRAD0_opsz48.svg"
+              alt=""
+            />
+            <img
+              src="./assets/images/share_FILL0_wght400_GRAD0_opsz48.svg"
+              alt=""
+            />
+          </div>
         </div>
         <div class="card item-3">
           <h3>Impossible App</h3>
@@ -64,6 +146,20 @@
             earum ratione dignissimos fugiat obcaecati quam asperiores molestiae
             doloremque cupiditate rem.
           </p>
+          <div class="card-functions">
+            <img
+              src="./assets/images/favorite_FILL0_wght400_GRAD0_opsz48.svg"
+              alt=""
+            />
+            <img
+              src="./assets/images/bookmark_FILL0_wght400_GRAD0_opsz48.svg"
+              alt=""
+            />
+            <img
+              src="./assets/images/share_FILL0_wght400_GRAD0_opsz48.svg"
+              alt=""
+            />
+          </div>
         </div>
         <div class="card item-4">
           <h3>Easy Peasy App</h3>
@@ -73,6 +169,20 @@
             earum ratione dignissimos fugiat obcaecati quam asperiores molestiae
             doloremque cupiditate rem.
           </p>
+          <div class="card-functions">
+            <img
+              src="./assets/images/favorite_FILL0_wght400_GRAD0_opsz48.svg"
+              alt=""
+            />
+            <img
+              src="./assets/images/bookmark_FILL0_wght400_GRAD0_opsz48.svg"
+              alt=""
+            />
+            <img
+              src="./assets/images/share_FILL0_wght400_GRAD0_opsz48.svg"
+              alt=""
+            />
+          </div>
         </div>
         <div class="card item-5">
           <h3>Ad Blocker</h3>
@@ -82,6 +192,20 @@
             earum ratione dignissimos fugiat obcaecati quam asperiores molestiae
             doloremque cupiditate rem.
           </p>
+          <div class="card-functions">
+            <img
+              src="./assets/images/favorite_FILL0_wght400_GRAD0_opsz48.svg"
+              alt=""
+            />
+            <img
+              src="./assets/images/bookmark_FILL0_wght400_GRAD0_opsz48.svg"
+              alt=""
+            />
+            <img
+              src="./assets/images/share_FILL0_wght400_GRAD0_opsz48.svg"
+              alt=""
+            />
+          </div>
         </div>
         <div class="card item-6">
           <h3>Money Maker</h3>
@@ -91,6 +215,20 @@
             earum ratione dignissimos fugiat obcaecati quam asperiores molestiae
             doloremque cupiditate rem.
           </p>
+          <div class="card-functions">
+            <img
+              src="./assets/images/favorite_FILL0_wght400_GRAD0_opsz48.svg"
+              alt=""
+            />
+            <img
+              src="./assets/images/bookmark_FILL0_wght400_GRAD0_opsz48.svg"
+              alt=""
+            />
+            <img
+              src="./assets/images/share_FILL0_wght400_GRAD0_opsz48.svg"
+              alt=""
+            />
+          </div>
         </div>
       </main>
       <aside>
@@ -118,20 +256,32 @@
         <h2>Trending</h2>
         <div class="trending-card">
           <div class="trending-1">
-            <div class="address">@tegan</div>
+            <img src="./assets/images/cat-1.jpg" alt="" />
+            <div class="user-address">@tegan</div>
             <div class="title">World Peace Builder</div>
           </div>
           <div class="trending-2">
-            <div class="address">@morgan</div>
+            <img src="./assets/images/cat-2.jpg" alt="" />
+            <div class="user-address">@morgan</div>
             <div class="title">Super Cool Project</div>
           </div>
           <div class="trending-1">
-            <div class="address">@kendall</div>
+            <img src="./assets/images/cat-1.jpg" alt="" />
+            <div class="user-address">@kendall</div>
             <div class="title">Life Changing App</div>
           </div>
           <div class="trending-1">
-            <div class="address">@alex</div>
+            <img src="./assets/images/cat-3.jpg" alt="" />
+            <div class="user-address">@alex</div>
             <div class="title">No Traffic Maker</div>
+          </div>
+          <br />
+          <div class="attribution">
+            <a
+              href="https://www.freepik.com/free-vector/cute-bad-cat-wearing-suit-sunglasses-with-baseball-bat-cartoon-icon-illustration-animal-fashion-icon-concept-isolated-flat-cartoon-style_10909204.htm#query=cartoon%20cat&position=4&from_view=keyword&track=ais"
+              >Image by catalyststuff</a
+            >
+            on Freepik
           </div>
         </div>
       </aside>
