Style header section using grid

--- a/index.html
+++ b/index.html
@@ -9,16 +9,28 @@
   <body>
     <div class="container">
       <header>
-        <div class="searchbar">
-          <form action="index.html">
-            <input type="search" /><button type="submit">Submit</button>
-          </form>
-        </div>
+        <form action="index.html" class="search-form">
+          <label for="user-search"
+            ><img
+              src="./assets/images/search_FILL0_wght400_GRAD0_opsz48.svg"
+              alt=""
+          /></label>
+          <input type="search" id="user-search" />
+        </form>
         <div class="profile">
-          <img src="./assets/images/cat-2.jpg" alt="" />Levyne
+          <img
+            src="./assets/images/notifications_FILL0_wght400_GRAD0_opsz48.svg"
+            alt=""
+          />
+          <img src="./assets/images/cat-2.jpg" alt="" />
+          <h2>Levyne</h2>
         </div>
         <div class="greeting">
-          <img src="./assets/images/cat-2.jpg" alt="" />Hello there, Levyne
+          <img src="./assets/images/cat-2.jpg" alt="" />
+          <div>
+            Hello there,
+            <h1>Levyne</h1>
+          </div>
         </div>
         <div class="user-function">
           <ul>
