Style the dashboard sidebar

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           /></label>
           <input type="search" id="user-search" />
         </form>
-        <div class="profile">
+        <div class="user-profile">
           <img
             src="./assets/images/notifications_FILL0_wght400_GRAD0_opsz48.svg"
             alt=""
