Style main section and project cards

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
       </header>
       <div class="dashboard">
-        <div class="title">
+        <div class="dashboard-title">
           <img
             src="./assets/images/dashboard_FILL0_wght400_GRAD0_opsz48.svg"
             alt=""
@@ -104,142 +104,144 @@
       </div>
       <main>
         <h2>Your Projects</h2>
-        <div class="card item-1">
-          <h3>Super Cool Project</h3>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus
-            tempore molestias vel voluptas velit, dolorum illo, ipsa magni, a
-            earum ratione dignissimos fugiat obcaecati quam asperiores molestiae
-            doloremque cupiditate rem.
-          </p>
-          <div class="card-functions">
-            <img
-              src="./assets/images/favorite_FILL0_wght400_GRAD0_opsz48.svg"
-              alt=""
-            />
-            <img
-              src="./assets/images/bookmark_FILL0_wght400_GRAD0_opsz48.svg"
-              alt=""
-            />
-            <img
-              src="./assets/images/share_FILL0_wght400_GRAD0_opsz48.svg"
-              alt=""
-            />
+        <div class="project-cards">
+          <div class="card item-1">
+            <h3>Super Cool Project</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus
+              tempore molestias vel voluptas velit, dolorum illo, ipsa magni, a
+              earum ratione dignissimos fugiat obcaecati quam asperiores
+              molestiae doloremque cupiditate rem.
+            </p>
+            <div class="card-functions">
+              <img
+                src="./assets/images/favorite_FILL0_wght400_GRAD0_opsz48.svg"
+                alt=""
+              />
+              <img
+                src="./assets/images/bookmark_FILL0_wght400_GRAD0_opsz48.svg"
+                alt=""
+              />
+              <img
+                src="./assets/images/share_FILL0_wght400_GRAD0_opsz48.svg"
+                alt=""
+              />
+            </div>
           </div>
-        </div>
-        <div class="card item-2">
-          <h3>Less Cool Project</h3>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus
-            tempore molestias vel voluptas velit, dolorum illo, ipsa magni, a
-            earum ratione dignissimos fugiat obcaecati quam asperiores molestiae
-            doloremque cupiditate rem.
-          </p>
-          <div class="card-functions">
-            <img
-              src="./assets/images/favorite_FILL0_wght400_GRAD0_opsz48.svg"
-              alt=""
-            />
-            <img
-              src="./assets/images/bookmark_FILL0_wght400_GRAD0_opsz48.svg"
-              alt=""
-            />
-            <img
-              src="./assets/images/share_FILL0_wght400_GRAD0_opsz48.svg"
-              alt=""
-            />
+          <div class="card item-2">
+            <h3>Less Cool Project</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus
+              tempore molestias vel voluptas velit, dolorum illo, ipsa magni, a
+              earum ratione dignissimos fugiat obcaecati quam asperiores
+              molestiae doloremque cupiditate rem.
+            </p>
+            <div class="card-functions">
+              <img
+                src="./assets/images/favorite_FILL0_wght400_GRAD0_opsz48.svg"
+                alt=""
+              />
+              <img
+                src="./assets/images/bookmark_FILL0_wght400_GRAD0_opsz48.svg"
+                alt=""
+              />
+              <img
+                src="./assets/images/share_FILL0_wght400_GRAD0_opsz48.svg"
+                alt=""
+              />
+            </div>
           </div>
-        </div>
-        <div class="card item-3">
-          <h3>Impossible App</h3>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus
-            tempore molestias vel voluptas velit, dolorum illo, ipsa magni, a
-            earum ratione dignissimos fugiat obcaecati quam asperiores molestiae
-            doloremque cupiditate rem.
-          </p>
-          <div class="card-functions">
-            <img
-              src="./assets/images/favorite_FILL0_wght400_GRAD0_opsz48.svg"
-              alt=""
-            />
-            <img
-              src="./assets/images/bookmark_FILL0_wght400_GRAD0_opsz48.svg"
-              alt=""
-            />
-            <img
-              src="./assets/images/share_FILL0_wght400_GRAD0_opsz48.svg"
-              alt=""
-            />
+          <div class="card item-3">
+            <h3>Impossible App</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus
+              tempore molestias vel voluptas velit, dolorum illo, ipsa magni, a
+              earum ratione dignissimos fugiat obcaecati quam asperiores
+              molestiae doloremque cupiditate rem.
+            </p>
+            <div class="card-functions">
+              <img
+                src="./assets/images/favorite_FILL0_wght400_GRAD0_opsz48.svg"
+                alt=""
+              />
+              <img
+                src="./assets/images/bookmark_FILL0_wght400_GRAD0_opsz48.svg"
+                alt=""
+              />
+              <img
+                src="./assets/images/share_FILL0_wght400_GRAD0_opsz48.svg"
+                alt=""
+              />
+            </div>
           </div>
-        </div>
-        <div class="card item-4">
-          <h3>Easy Peasy App</h3>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus
-            tempore molestias vel voluptas velit, dolorum illo, ipsa magni, a
-            earum ratione dignissimos fugiat obcaecati quam asperiores molestiae
-            doloremque cupiditate rem.
-          </p>
-          <div class="card-functions">
-            <img
-              src="./assets/images/favorite_FILL0_wght400_GRAD0_opsz48.svg"
-              alt=""
-            />
-            <img
-              src="./assets/images/bookmark_FILL0_wght400_GRAD0_opsz48.svg"
-              alt=""
-            />
-            <img
-              src="./assets/images/share_FILL0_wght400_GRAD0_opsz48.svg"
-              alt=""
-            />
+          <div class="card item-4">
+            <h3>Easy Peasy App</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus
+              tempore molestias vel voluptas velit, dolorum illo, ipsa magni, a
+              earum ratione dignissimos fugiat obcaecati quam asperiores
+              molestiae doloremque cupiditate rem.
+            </p>
+            <div class="card-functions">
+              <img
+                src="./assets/images/favorite_FILL0_wght400_GRAD0_opsz48.svg"
+                alt=""
+              />
+              <img
+                src="./assets/images/bookmark_FILL0_wght400_GRAD0_opsz48.svg"
+                alt=""
+              />
+              <img
+                src="./assets/images/share_FILL0_wght400_GRAD0_opsz48.svg"
+                alt=""
+              />
+            </div>
           </div>
-        </div>
-        <div class="card item-5">
-          <h3>Ad Blocker</h3>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus
-            tempore molestias vel voluptas velit, dolorum illo, ipsa magni, a
-            earum ratione dignissimos fugiat obcaecati quam asperiores molestiae
-            doloremque cupiditate rem.
-          </p>
-          <div class="card-functions">
-            <img
-              src="./assets/images/favorite_FILL0_wght400_GRAD0_opsz48.svg"
-              alt=""
-            />
-            <img
-              src="./assets/images/bookmark_FILL0_wght400_GRAD0_opsz48.svg"
-              alt=""
-            />
-            <img
-              src="./assets/images/share_FILL0_wght400_GRAD0_opsz48.svg"
-              alt=""
-            />
+          <div class="card item-5">
+            <h3>Ad Blocker</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus
+              tempore molestias vel voluptas velit, dolorum illo, ipsa magni, a
+              earum ratione dignissimos fugiat obcaecati quam asperiores
+              molestiae doloremque cupiditate rem.
+            </p>
+            <div class="card-functions">
+              <img
+                src="./assets/images/favorite_FILL0_wght400_GRAD0_opsz48.svg"
+                alt=""
+              />
+              <img
+                src="./assets/images/bookmark_FILL0_wght400_GRAD0_opsz48.svg"
+                alt=""
+              />
+              <img
+                src="./assets/images/share_FILL0_wght400_GRAD0_opsz48.svg"
+                alt=""
+              />
+            </div>
           </div>
-        </div>
-        <div class="card item-6">
-          <h3>Money Maker</h3>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus
-            tempore molestias vel voluptas velit, dolorum illo, ipsa magni, a
-            earum ratione dignissimos fugiat obcaecati quam asperiores molestiae
-            doloremque cupiditate rem.
-          </p>
-          <div class="card-functions">
-            <img
-              src="./assets/images/favorite_FILL0_wght400_GRAD0_opsz48.svg"
-              alt=""
-            />
-            <img
-              src="./assets/images/bookmark_FILL0_wght400_GRAD0_opsz48.svg"
-              alt=""
-            />
-            <img
-              src="./assets/images/share_FILL0_wght400_GRAD0_opsz48.svg"
-              alt=""
-            />
+          <div class="card item-6">
+            <h3>Money Maker</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus
+              tempore molestias vel voluptas velit, dolorum illo, ipsa magni, a
+              earum ratione dignissimos fugiat obcaecati quam asperiores
+              molestiae doloremque cupiditate rem.
+            </p>
+            <div class="card-functions">
+              <img
+                src="./assets/images/favorite_FILL0_wght400_GRAD0_opsz48.svg"
+                alt=""
+              />
+              <img
+                src="./assets/images/bookmark_FILL0_wght400_GRAD0_opsz48.svg"
+                alt=""
+              />
+              <img
+                src="./assets/images/share_FILL0_wght400_GRAD0_opsz48.svg"
+                alt=""
+              />
+            </div>
           </div>
         </div>
       </main>
