Style announcement and trending cards

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
             alt=""
           />
           <img src="./assets/images/cat-2.jpg" alt="" />
-          <h2>Levyne</h2>
+          <h2>Soft Kitty</h2>
         </div>
         <div class="greeting">
           <img src="./assets/images/cat-2.jpg" alt="" />
           <div>
             Hello there,
-            <h1>Levyne</h1>
+            <h1>Soft Kitty</h1>
           </div>
         </div>
         <div class="user-function">
@@ -250,21 +250,15 @@
         <div class="announcement-card">
           <div class="announcement-1">
             <h4>Site Maintenance</h4>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
-            laboriosam numquam et beatae autem nobis, blanditiis itaque
-            pariatur.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
           </div>
           <div class="announcement-2">
             <h4>Community Share Day</h4>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
-            laboriosam numquam et beatae autem nobis, blanditiis itaque
-            pariatur.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
           </div>
           <div class="announcement-3">
             <h4>Updated Privacy Policy</h4>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
-            laboriosam numquam et beatae autem nobis, blanditiis itaque
-            pariatur.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
           </div>
         </div>
         <h2>Trending</h2>
@@ -272,22 +266,22 @@
           <div class="trending-1">
             <img src="./assets/images/cat-1.jpg" alt="" />
             <div class="user-address">@tegan</div>
-            <div class="title">World Peace Builder</div>
+            <div class="user-title">World Peace Builder</div>
           </div>
           <div class="trending-2">
             <img src="./assets/images/cat-2.jpg" alt="" />
             <div class="user-address">@morgan</div>
-            <div class="title">Super Cool Project</div>
+            <div class="user-title">Super Cool Project</div>
           </div>
-          <div class="trending-1">
+          <div class="trending-3">
             <img src="./assets/images/cat-1.jpg" alt="" />
             <div class="user-address">@kendall</div>
-            <div class="title">Life Changing App</div>
+            <div class="user-title">Life Changing App</div>
           </div>
-          <div class="trending-1">
+          <div class="trending-4">
             <img src="./assets/images/cat-3.jpg" alt="" />
             <div class="user-address">@alex</div>
-            <div class="title">No Traffic Maker</div>
+            <div class="user-title">No Traffic Maker</div>
           </div>
           <br />
           <div class="attribution">
